Resolved merge conflict